adding script.js

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="line"></div>
             </div>
         </nav>
+    <script src="script.js"></script>
 </body>
 
 </html>
