header section added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <div class="line"></div>
             </div>
         </nav>
+        <header>
+            <p>Tomasz</p>
+            <p>Dąbrowski</p>
+        </header>
     <script src="script.js"></script>
 </body>
 
