--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
             <p>Tomasz</p>
             <p>Dąbrowski</p>
         </header>
+        <div class="whitewraper">
+            <div id="white">  
+                <div class="about">
+                    <h1>About</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.
+                    Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, id culpa amet maiores voluptates, et esse. Sit dolorem eius eaque tempore quibusdam, itaque maxime alias nulla!
+                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis. </p>
+                    <button class="aboutbutton"><a href="#">Read More</a></button>
+                </div>
+                <div class="photoabout"></div>
+            </div>
+        </div>
+
     <script src="script.js"></script>
 </body>
 
