--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tomasz Dąbrowski - Violin</title>
+    <title>Tomasz Dąbrowski - Violin - about</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script&family=Oswald:wght@200;300&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -17,9 +17,9 @@
         <nav>
             <div class="opacity"></div>
             <ul class='menu active'>
-                <li><a href="#">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="#repertoire">Repertuar</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="/index.html">Repertuar</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
             <div class="burger">
@@ -28,10 +28,18 @@
                 <div class="line"></div>
             </div>
         </nav>
-        <header>
-            <p>Tomasz</p>
-            <p>Dąbrowski</p>
-        </header>
+        <div class="whitewraper">
+            <div id="white">  
+                <div class="about">
+                    <h1>About</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.
+                    Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, id culpa amet maiores voluptates, et esse. Sit dolorem eius eaque tempore quibusdam, itaque maxime alias nulla!
+                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis. </p>
+                    <button class="aboutbutton"><a href="#">Read More</a></button>
+                </div>
+                <div class="photoabout"></div>
+            </div>
+        </div>
 
     <script src="script.js"></script>
 </body>
