--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
         <nav>
             <div class="opacity"></div>
             <ul class='menu active'>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="#repertoire">Repertuar</a></li>
+                <li><a href="/index.html">Repertuar</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
             <div class="burger">
@@ -28,11 +28,7 @@
                 <div class="line"></div>
             </div>
         </nav>
-        <header>
-            <p>Tomasz</p>
-            <p>Dąbrowski</p>
-        </header>
-
+    <div>contact</div>
     <script src="script.js"></script>
 </body>
 
