section quote added and stylized

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             </div>
         </div>
 
+        <div class="quote">
+            <div>
+                <p>“Music is an agreeable harmony for the honor of God and the permissible delights of the soul.”</p>
+                <p>-Johann Sebastian Bach</p>
+            </div>
+        </div>
+        
     <script src="script.js"></script>
 </body>
 
