new contact section added and stylized

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
                 <p>-Johann Sebastian Bach</p>
             </div>
         </div>
-        
+        <div class="contactbtn">
+            <div>
+                <p>Wedding, birthday, engagement?</p>
+                <p> Write to me, I will create an unforgettable moment for you.</p>
+            </div>
+            <button><a href="./contact.html">Contact</a></button>
+        </div>
     <script src="script.js"></script>
 </body>
 
