footer added and stylized

--- a/about.html
+++ b/about.html
@@ -40,6 +40,10 @@
                 <div class="photoabout"></div>
             </div>
         </div>
+    
+    <footer>
+        <p>&copy; Katarzyna Chełmińska - Junior FrontEnd Developer</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
