--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
             </div>
         </nav>
     <div>contact</div>
+    <footer>
+        <p>&copy; Katarzyna Chełmińska - Junior FrontEnd Developer</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
