--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             </div>
             <button><a href="./contact.html">Contact</a></button>
         </div>
+        <footer>
+            <p>&copy; Katarzyna Chełmińska - Junior FrontEnd Developer</p>
+        </footer>
     <script src="script.js"></script>
 </body>
 
