new page added and stylized

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <div class="container">
         <nav>
             <div class="opacity"></div>
@@ -27,24 +28,32 @@
                 <div class="line"></div>
                 <div class="line"></div>
             </div>
-        </nav>
-        <div class="whitewraper">
-            <div id="white">  
-                <div class="about">
-                    <h1>About</h1>
+        </nav> 
+        <div class = "about">
+            <div class = "shadow">
+                <div class="text">
+                    <h2>About</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.
+                    Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, id culpa amet maiores voluptates, et esse. Sit dolorem eius eaque tempore quibusdam! Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, nulla cumque nemo saepe quis.</p>
+                    <div class="photoabout"></div>
+                    <p>
+                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.
                     Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, id culpa amet maiores voluptates, et esse. Sit dolorem eius eaque tempore quibusdam, itaque maxime alias nulla!
-                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis. </p>
-                    <button class="aboutbutton"><a href="#">Read More</a></button>
-                </div>
-                <div class="photoabout"></div>
+                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.. necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.
+                    Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, id culpa amet maiores voluptates, et esse. Sit dolorem eius eaque tempore quibusdam, itaque maxime alias nulla!
+                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.. necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.
+                    Eos odit sint cum? Est pariatur nulla cumque nemo saepe quis placeat ad, id culpa amet maiores voluptates, et esse. Sit dolorem eius eaque tempore quibusdam, itaque maxime alias nulla!
+                    Cum rerum vitae, asperiores vero doloremque ad maiores blanditiis voluptatum, dignissimos eius sed quibusdam facere accusamus facilis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, temporibus ipsum officiis quos quibusdam quae dolor pariatur possimus, odio, necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.. necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati.necessitatibus nam eius inventore blanditiis ullam nisi illum reprehenderit rem obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem saepe repellat ab in, dignissimos consequuntur, adipisci officia voluptate inventore voluptates illum quam hic numquam harum mollitia nostrum! Error, excepturi doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam animi nemo similique, quidem rem eius quibusdam saepe officiis ea fugiat possimus vitae commodi exercitationem recusandae aliquid soluta odio consequatur!
+                    Iure odio nemo ipsa nostrum sunt, aspernatur ab expedita odit laborum beatae eum quaerat tempore vero, ut necessitatibus, ipsam doloribus velit voluptate laudantium voluptatum repellendus repudiandae obcaecati aut? Tempore, consequatur.
+                    Ea laborum, nobis et deleniti recusandae enim aliquam at eligendi maxime tenetur deserunt atque, modi, ad possimus soluta iste numquam. Expedita iure quia laudantium eligendi ex! Rem culpa natus corporis.
+                    Maxime totam consequatur, expedita quam dolor numquam dolore eum beatae, distinctio harum quo. Officia sint expedita maxime. Placeat, excepturi minima. Ab quia, sint facere excepturi quam odio ea quidem molestias.
+                    Adipisci labore autem aut sapiente, mollitia modi asperiores repudiandae sunt! Ut distinctio modi cupiditate corporis non voluptatibus deleniti labore, necessitatibus earum nulla aut reiciendis praesentium sint, a ipsam quos iusto?</p>
+                </div>  
             </div>
         </div>
-    
     <footer>
         <p>&copy; Katarzyna Chełmińska - Junior FrontEnd Developer</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
 
