styling about section

--- a/about.html
+++ b/about.html
@@ -47,7 +47,9 @@
                     Iure odio nemo ipsa nostrum sunt, aspernatur ab expedita odit laborum beatae eum quaerat tempore vero, ut necessitatibus, ipsam doloribus velit voluptate laudantium voluptatum repellendus repudiandae obcaecati aut? Tempore, consequatur.
                     Ea laborum, nobis et deleniti recusandae enim aliquam at eligendi maxime tenetur deserunt atque, modi, ad possimus soluta iste numquam. Expedita iure quia laudantium eligendi ex! Rem culpa natus corporis.
                     Maxime totam consequatur, expedita quam dolor numquam dolore eum beatae, distinctio harum quo. Officia sint expedita maxime. Placeat, excepturi minima. Ab quia, sint facere excepturi quam odio ea quidem molestias.
-                    Adipisci labore autem aut sapiente, mollitia modi asperiores repudiandae sunt! Ut distinctio modi cupiditate corporis non voluptatibus deleniti labore, necessitatibus earum nulla aut reiciendis praesentium sint, a ipsam quos iusto?</p>
+                    Adipisci labore autem aut sapiente, mollitia modi asperiores repudiandae sunt! Ut distinctio modi cupiditate corporis non voluptatibus deleniti labore, necessitatibus earum nulla aut reiciendis praesentium sint, a ipsam quos iusto?
+                    </p>
+                    <p class="signature">- Tomasz Dąbrowski</p>
                 </div>  
             </div>
         </div>
