contact section styling

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id = "contact">
         <nav>
             <div class="opacity"></div>
             <ul class='menu active'>
@@ -28,7 +28,37 @@
                 <div class="line"></div>
             </div>
         </nav>
-    <div>contact</div>
+        <div class="half">
+            <section class="contact">
+                <h1>Contact</h1>
+                <div>
+                    <form action="">
+                        <div class="info">
+                            <section class="wrap">
+                                <label for="email" >Email</label>
+                                <input type="email" placeholder="Enter Your Email">
+                            </section>
+                            <section class="wrap">
+                                <label for="name">Name</label>
+                                <input type="text" placeholder="Enter Your Name">
+                            </section>
+                        </div>
+                        <section class="message">
+                            <label for="text">Message:</label>
+                            <textarea></textarea>
+                        </section>
+                        <button> <a href="#">Send</a></button>
+                    </form>
+                    <div class="socials">
+                        <a href=""><i class="fab fa-facebook-square"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fab fa-youtube-square"></i></a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     <footer>
         <p>&copy; Katarzyna Chełmińska - Junior FrontEnd Developer</p>
     </footer>
