--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
         <nav>
             <div class="opacity"></div>
             <ul class='menu active'>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="/index.html">Repertuar</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="index.html">Repertuar</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line"></div>
