--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
         <nav>
             <div class="opacity"></div>
             <ul class='menu active'>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="/index.html">Repertuar</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Repertuar</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line"></div>
