--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="opacity"></div>
             <ul class='menu active'>
                 <li><a href="#">Home</a></li>
-                <li><a href="./about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#repertoire">Repertuar</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line"></div>
